# python-package-template

./: .gitignore  README.md  cookiecutter.json  justfile  test_cookiecutter_template.py
.github/workflows/: ci.yml  docs.yml
{{cookiecutter.repo_name}}/: .gitignore  README.md  justfile  pyproject.toml  zensical.toml
{{cookiecutter.repo_name}}/.github/workflows/: ci.yml  docs.yml
{{cookiecutter.repo_name}}/docs/: getting-started.md  index.md
{{cookiecutter.repo_name}}/docs/API_Reference/: {{cookiecutter.package_name}}.md
{{cookiecutter.repo_name}}/src/{{cookiecutter.package_name}}/: __init__.py  _version.py  main.py
{{cookiecutter.repo_name}}/tests/: test_main.py
